--- a/public/lang/en.json
+++ b/public/lang/en.json
@@ -1,6 +1,7 @@
 {
   "components": {
     "navbar": {
+      "dashboard": "Dashboard",
       "discover": "Discover",
       "following": "Following",
       "history": "History",
